# quoter

./: .env.template  .gitignore  Cargo.toml  README.md
bins/api/: Cargo.toml  README.md
bins/api/src/: main.rs
bins/api/src/config/: mod.rs
bins/api/src/router/: mod.rs  quote.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  quote.rs  utils.rs
crates/services/: Cargo.toml
crates/services/src/quote/: mod.rs
crates/types/: Cargo.toml
crates/types/src/: app_state.rs  error.rs  lib.rs  quote.rs
deployment/: README.md
deployment/terraform/azure/: databases.tf  main.tf  network.tf  providers.tf  variables.tf
deployment/terraform/envs/dev/: backend.hcl  values.tfvars
deployment/terraform/envs/prod/: backend.hcl  values.tfvars
deployment/terraform/modules/azure/sql/: main.tf  outputs.tf  variables.tf
deployment/terraform/modules/azure/sql_dns_zone/: main.tf  outputs.tf  variables.tf
deployment/terraform/modules/azure/vnet/: locals.tf  main.tf  outputs.tf  variables.tf
docker/: api.Dockerfile  docker-compose.yaml
migrations/: 01_quote.sql  02_seed.sql  README.md
