[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { workspace = true }
types = { workspace = true }
services = { workspace = true }

tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = {workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
