[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
types = { workspace = true }
services = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = {workspace = true }
axum = { workspace = true }
uuid = { workspace = true }

tiberius = { workspace = true }
tokio-util = { workspace = true }
