[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
types = { workspace =  true }
chrono = {  workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

tiberius = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = "0.3.31"
