[package]
name = "types"
version = "0.1.0"
edition = "2024"

[dependencies]
tiberius = { workspace = true }

chrono = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
